mule-user-guide/v/3.6/publishing-a-soap-api.adoc
= Publishing a SOAP API

:keywords: cxf

[NOTE]
When sending requests to an external web service, the recommended approach is to use the link:https://developer.mulesoft.com/docs/display/current/Web+Service+Consumer[Web Service Consumer]﻿ rather than the CXF Module.

The *CXF Component* facilitates the publication of **SOAP APIs **within a Mule flow.

Mule leverages Apache's open-source http://cxf.apache.org/docs/a-simple-jax-ws-service.html[CXF framework] to build APIs. You can create a CXF API in Studio by configuring a CXF component in your Mule flow to perform any of the following CXF operations related to publishing a SOAP API:

* publish a simple service
* publish a JAX-WS service
* proxy a published service

Using Mule's CXF Component, you can also link:/documentation/display/current/Securing+a+SOAP+API[enable WS-security], specify databindings, and add interceptors to your CXF API. For more information about how Mule leverages the CXF framework, consult the link:/documentation/display/current/CXF+Module+Reference[CXF Module Configuration Reference].

*link:#PublishingaSOAPAPI-example1[Skip to WSDL-First Proxy Service Example Code]*

*link:#PublishingaSOAPAPI-example1[Skip to WSDL-First JAX-WS Example Code]*

*link:#PublishingaSOAPAPI-example2[Skip to Code-First JAX-WS Example Code]*

== Assumptions

This document describes the details of the example within the context of Anypoint Studio, Mule ESB’s graphical user interface (GUI). Where appropriate, the XML configuration accompanies the Studio interface screenshots. This document assumes that you are familiar with Mule ESB and the link:/documentation/display/current/Anypoint+Studio+Essentials[Anypoint Studio interface]. 

== Basic Anatomy

Exposing a SOAP API through a Mule application always requires a minimum of three elements:

. an *endpoint* that receives requests and sends responses
. a *CXF Component* that references and exposes the WSDL file
. a *component* (or more likely a combination of components) that performs the operations the API supports (retrieving data, updating data in a database, etc.)

image:/documentation/download/attachments/122752042/SOAP-flow1.png?version=1&modificationDate=1400263533778[image]

[width="100%",cols="50%,50%",options="header",]
|===
|Element |Description
|*Endpoint* |The endpoint receives requests and sends responses, both containing XML SOAP envelopes. Typically, the endpoint is HTTP, HTTPS, JMS, or VM.
|*CXF component* a|
A SOAP API needs to expose its contract through a WSDL file. Access the contents of this file by adding `?wsdl` to the API's URL when performing a request.

Through CXF, Mule allows you to present this WSDL contract using one of two http://en.wikipedia.org/wiki/Web_service#Automated_design_methodologies[methods]:

. **WSDL-first**: start with a WSDL file that you created yourself, import it into your Mule project, then reference its location from the CXF component.
. **Code-first**: start with an annotated Java class, then have JAX-WS compile a WSDL file based upon it.

Regardless of which method you use, you can instruct the CXF component to verify the validity of incoming requests against the WSDL.

The CXF component also allows you to select an operation type:

. *Proxy Service*: Allows you to deal with XML directly in your flow. As it implies less transformations, it's more efficient in terms of response time. Use it when: +
* You want to edit the XML directly
* Are using XSLT
* You will use DataMapper to map fields +
 +
. **JAX-WS**: Converts the payload into a POJO. Attributes in the POJO are easier to access in your flow. Use it when:
* You are more comfortable working with Java objects
* You need to construct POJO or JSON outputs
* You are using Community runtime and can't employ DataMapper
* Want to present the WSDL through a Code-first approach (the proxy service only uses WSDL-first)

image:/documentation/download/attachments/122752042/CXF-1.png?version=1&modificationDate=1400263982600[image]

image:/documentation/download/attachments/122752042/CXF-2.png?version=1&modificationDate=1400263998482[image]

The third option, *Simple service*, can be used if you are using a simple service pattern, but is not covered here.

|*Processing Component(s)* |With the other two components in place, your flow is ready to process requests and perform the business logic that makes up your API. Your API could potentially fit into a single Java class, but will more likely include the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc.
|===

== Building a WSDL-First Proxy Service API

This process assumes that you have already created the WSDL you intend to use for your SOAP API. For the purpose of exploring this functionality, you can use a https://github.com/mulesoft/tshirt-service/blob/master/src/main/resources/tshirt.wsdl.xml[sample WSDL file].

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Import a WSDL file into your project. +
.. Select *File >* *Import*.
.. Select **General > File System**.
.. Select the WSDL file from your file system, then, in the *Into Folder* field, select `src/main/resources`.
.. Click *Finish*.
. Drag and drop an HTTP listener and a CXF component into a new flow on your canvas. +

+
image:/documentation/download/attachments/122752042/basic+flow.png?version=3&modificationDate=1419967079830[image]
+
+
+

. In the HTTP Listener's properties, create a new configuration element for it. Let the port stay as the default value **8081**, and set the host to *localhost*.
. Configure the CXF component as per the image and table below.

+
image:/documentation/download/attachments/122752042/CXF-3.png?version=1&modificationDate=1400264287239[image]
+
[cols=",",options="header",]
|===
|Field |Value
|*Operation* |Proxy service
|*Port* |Specify the port to which you wish to bind the WSDL
|*Payload* |body
|===
+
The output of this component is a byte array who's content depends upon the value you set in the *Payload* field.
+
* If you select *envelope*, then the message remains wrapped within the envelope in which it was originally received
* If you selected *body*, then the message contains only the body, without its envelope
. Configure the CXF component's *Advanced* settings as per the image and table below. (Read more about Advanced Settings of the CXF Component.)

+
image:/documentation/download/attachments/122752042/CXFflow2.png?version=1&modificationDate=1400264495230[image]
+
[cols=",",options="header",]
|===
|Field |Value
|*WSDL Location* |Filepath of the WSDL in your Mule project
|*Soap 1.1* +
OR +
*Soap 1.2* |http://www.w3.org/2003/06/soap11-soap12.html[Version of SOAP] you wish to use
|===
+

. Drop a Flow Reference after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.

+
image:/documentation/download/attachments/122752042/basic+flow2.png?version=3&modificationDate=1419967109160[image] +
+

As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations your SOAP API must support.

. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule components to build your business logic inside this flow.
. If you want direct access to the payload in your business logic flow, you must pass the message through an **XML-to-DOM transformer**.  +

+
image:/documentation/download/attachments/122752042/basic+flow3.png?version=1&modificationDate=1419965976630[image]
+
Otherwise, you can use Xpath expressions to parse parts of the payload when needed. For example, suppose that you only want to alter the message when a condition is met, you can implement a choice router that evaluates the condition based on an Xpath expression.
. Run your Mule project. Access the API by sending requests to the HTTP listener. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
[tab,title="XML Editor or Standalone"]
....
. Import a WSDL file into your project: +
.. Select *File >* *Import*.
.. Select *General* > *File System*.
.. Select the WSDL File from your file system, then, in the *Into Folder* field, select  `src/main/resources.`
.. Click *Finish*.
. Create an` http:listener `in a new flow.
+

[source, xml]
----
<http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|`listener-config`
|*path* a|/
|*doc:name* a|`HTTP Connector`
|===
. Create a global configuration element for the HTTP listener, outside the flow
+

[source, xml]
----
<http:listener-config name="listener-config" host="localhost" port="8081"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`listener-config`
|*host* a|`localhost`
|*port* a|`8081`
|===
. Add a `cxf:proxy-service` element after the HTTP listener.
+

[source, xml]
----
<cxf:proxy-service doc:name="SOAP" payload="body" port="myAPI" service="myAPI" wsdlLocation="myAPI.wsdl"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*wsdlLocation* |The filepath of your WSDL in the Mule project
|*service* a|`myAPI`
|*port* a|`myAPI`
|*payload* a|`body`
|===

+
The output of this component is a byte array who's content depends upon the value you set for the `payload` attribute.       
+
* If you select *envelope*, then the message remains wrapped within the envelope in which it was originally received
* If you selected *body*, then the message contains only the body, without its envelope
. Create a `flow-ref` after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API is carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+

[source, xml]
----
<flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`business-logic_flow`
|*doc:name* a|`Flow Reference`
|===

+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Through these elements, you can model, then configure your flow to perform the operations your SOAP API must support.
+

[source, xml]
----
<flow name="business-logic_flow" doc:name="business-logic_flow">
     <!-- your business logic here -->
</flow>
----

. Create a new flow and name it with the value you assigned to the `flow-ref` attribute *Flow Name*. Then use other mule components to build your business logic inside this flow.
. If you want direct access to the payload in your business-logic flow, you must pass the message through a `mulexml:xml-to-dom-transformer`.
+

[source, xml]
----
<mulexml:xml-to-dom-transformer doc:name="XML to DOM"/>
----

+
Otherwise, you can use Xpath expressions to parse parts of the payload when needed. For example, suppose that you only want to alter the message when a condition is met, you can implement a choice router that evaluates the condition based on an Xpath expression.
. Run your Mule project. Access the API by sending requests to the HTTP listener. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------


=== Complete WSDL-First Example

[NOTE]
====
For this code to be executable, you must include, in your project:

* a WSDL file 
* your unique business logic in the business logic flow
====

[source, xml]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">
    <http:listener-config name="listener-config" host="localhost" port="8081"/>
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
        <cxf:proxy-service doc:name="SOAP" payload="body" port="myAPI" service="myAPI" wsdlLocation="myAPI.wsdl"/>
        <mulexml:dom-to-xml-transformer doc:name="DOM to XML"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

=== Advanced Example

Create a *Mule Example Project* in Studio and select the template *Service Orchestration and Choice Routing*.

== Building a WSDL-First JAX-WS API

This process assumes that you have already created the WSDL you intend to use for your SOAP API. For the purpose of exploring this functionality, you can use a https://github.com/mulesoft/tshirt-service/blob/master/src/main/resources/tshirt.wsdl.xml[sample WSDL file].

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Import a WSDL file into your project. +
.. Select *File >* *Import*.
.. Select **General > File System**.
.. Select the WSDL file from your file system, then, in the *Into Folder* field, select `src/main/resources`.
.. Click *Finish*.
. Drag and drop an HTTP connector and a CXF component into a new flow on your canvas. +

+
image:/documentation/download/attachments/122752042/basic+flow.png?version=3&modificationDate=1419967079830[image]
+

. Configure the *CXF component* as per the image and table below. At runtime, the output of this component is a POJO.

+
image:/documentation/download/attachments/122752042/CXFex2.png?version=1&modificationDate=1400265759259[image] +
+
[cols=",",options="header",]
|===
|Field |Value
|*Operation* |`JAX-WS service`
|*Port* |`myAPI`
|*Service* |`myAPI`
|===
. Configure the CXF component's *Advanced* settings as per the image and table below.

+
image:/documentation/download/attachments/122752042/OrderAPIadv.png?version=1&modificationDate=1400265855964[image]
+
[cols=",",options="header",]
|===
|Field |Value
|*WSDL Location* |Filepath of the WSDL in your Mule project
|*Soap 1.1* +
OR +
*Soap 1.2* |http://www.w3.org/2003/06/soap11-soap12.html[Version of SOAP] you wish to use
|===
. Drop a Flow Reference after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.

+
image:/documentation/download/attachments/122752042/basic+flow2.png?version=3&modificationDate=1419967109160[image] +
+

As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations your SOAP API must support.
. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule elements to build your business logic inside this flow.
. Run your Mule project. Access the API by sending requests to the HTTP Listener. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
[tab,title="XML Editor or Standalone"]
....
. Import a WSDL file into your project: +
.. Select *File >* *Import*.
.. Select *General* > *File System*.
.. Select the WSDL File from your file system, then, in the *Into Folder* field, select  `src/main/resources.`
.. Click *Finish*.
. Create an` http:listener `in a new flow.
+

[source, xml]
----
<http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|`listener-config`
|*path* a|`/`
|*doc:name* a|`HTTP Connector`
|===

. Create a global configuration element for the HTTP listener, outside the flow
+

[source, xml]
----
<http:listener-config name="listener-config" host="localhost" port="8081"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`listener-config`
|*host* a|`localhost`
|*port* a|`8081`
|===
. Add a `cxf:jaxws-service` element after the HTTP Listener. At runtime, the output of this component is a POJO.
+

[source, xml]
----
<cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService" wsdlLocation="myAPI.wsdl"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*wsdlLocation* |The filepath of your WSDL in the Mule project
|*service* a|`myService`
|*port* a|`myService`
|*doc:name* a|`SOAP`
|===

. Create a `flow-ref` after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API is carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+

[source, xml]
----
<flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`business-logic_flow`
|*doc:name* a|`Flow Reference`
|===

+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Through these elements, you can model, then configure your flow to perform the operations your SOAP API must support.
+
. Create a new flow and name it with the value you assigned to the `flow-ref` attribute *Flow Name*. Then use other mule components to build your business logic inside this flow.
. Run your Mule project. Access the API by sending requests to the HTTP Listener. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------

=== Complete WSDL-First Example

[NOTE]
====
For this code to be executable, you must include, in your project:

* a WSDL file 
* your unique business logic in the business logic flow
====

[source, xml]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">
    <http:listener-config name="listener-config" host="localhost" port="8081"/>
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
        <cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService" wsdlLocation="myAPI.wsdl"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

== Build a Code-First JAX-WS API

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Create the Java class that implements the API. +
.. In the Package Explorer, right click on the project name, then select **New > Class**.
.. Enter the class name, then click *Add...* then use the filter to display, then select the *Interface Definition* you wish to use. Click *Finish* to save your selection.
.. In the new tab that appears in Studio, create the definition for your API in the Java class, adding annotations that follow the http://docs.oracle.com/javase/7/docs/technotes/guides/xml/jax-ws/[JAX-WS] specification. +
+

[TIP]
====
If you already have a WSDL file for your API, you can import it, then automatically create a Java class based upon it.

 Import a WSDL file into your project

. Select *File >* *Import*.
. Select *General* > *File System*.
. Select the WSDL File from your file system, then, in the *Into Folder* field, select  `src/main/resources.`
. Click *Finish*.
====
. Build a flow with an *HTTP listener* and a *CXF component.* +

+
image:/documentation/download/attachments/122752042/basic+flow.png?version=3&modificationDate=1419967079830[image]
+
. Configure the *CXF component* as per the image and table below. At runtime, the output of this component is a POJO.
+
image:/documentation/download/attachments/122752042/newCXForderapi.png?version=1&modificationDate=1400522030795[image] +
+

[cols=",",options="header",]
|====
|Field |Value
|*Operation* |`JAX-WS service`
|*Port* |`myAPI`
|*Service* |`myAPI`
|*Service Class* |Specify the Java class you created
|====
+

[TIP]
====
Instead of building a Java class, you can import an existing WSDL file into your project, then use CXF to automatically build a Java class based upon it.

In the CXF component, click *Generate from WSDL.*

image:/documentation/download/attachments/122752042/newCXForderapi-genfromwsdl.png?version=1&modificationDate=1400522119095[image]

Then, select either the *URL* of the WSDL or the full *filepath* of the WSDL (including WSDL extension) within the project. After Mule generates the classes, ensure the *Service Class* field points to the actual Service Interface Definition, not the Implementation Class.
====
. Drop a *Flow Reference* after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL. +
image:/documentation/download/attachments/122752042/basic+flow2.png?version=3&modificationDate=1419967109160[image] +
+

As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations your SOAP API must support.
. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule components to build your business logic inside this flow.
. Run your Mule project. Access the API by sending requests to the HTTP Listener. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
[tab,title="XML Editor or Standalone"]
....
. Create the Java class that implements the API. +
.. In the Package Explorer, right click on the project name, then select **New > Class**.
.. Enter the class name, then click *Add...* then use the filter to display, then select the *Interface Definition* you wish to use. Click *Finish* to save your selection.
.. In the new tab that appears in Studio, create the definition for your API in the Java class, adding annotations that follow the http://docs.oracle.com/javase/7/docs/technotes/guides/xml/jax-ws/[JAX-WS] specification.
+
[TIP]
====
If you already have a WSDL file for your API, you can import it, then automatically create a Java class based upon it.

 Import a WSDL file into your project

... Select **File >Import**.
... Select *General* > *File System*.
... Select the WSDL File from your file system, then, in the *Into Folder* field, select  `src/main/resources.`
... Click *Finish*.
====
+
. Create an` http:listener `in a new flow.
+

[source, xml]
----
<http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|`listener-config`
|*path* a|`/`
|*doc:name* a|`HTTP Connector`
|===

. Create a global configuration element for the HTTP listener, outside the flow
+

[source, xml]
----
<http:listener-config name="listener-config" host="localhost" port="8081"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`listener-config`
|*host* a|`localhost`
|*port* a|`8081`
|===

. Add a `cxf:jaxws-service` element after the HTTP Listener. At runtime, the output of this component is a POJO.
+

[source]
----
cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService"  serviceClass="com.mulesoft.myService.myClass"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*serviceClass* a|`com.mulesoft.myService.myClass`
|*service* a|`myService`
|*port* a|`myService`
|*doc:name* a|`SOAP`
|===

. Create a `flow-ref` after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL. +
+

[source, xml]
----
<flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*name* a|`business-logic_flow`
|*doc:name* a|`Flow Reference`
|===
+

As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Through these elements, you can model, then configure your flow to perform the operations your SOAP API must support.
+

[source, xml]
----
<flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
----

. Create a new flow and name it with the value you assigned to the `flow-ref` attribute *Flow Name*. Then use other mule components to build your business logic inside this flow.
. Run your Mule project. Access the API by sending requests to the HTTP Listener. Include a SOAP envelope in the body.

[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as http://www.soapui.org/[SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------

=== Complete Code-First JAX-WS Example

[NOTE]
====
For this code to be executable, you must include, in your project:

* a Java class that constructs a WSDL
* your unique business logic in the business logic flow
====

[source, xml]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <http:listener-config name="listener-config" host="localhost" port="8081"/>
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
        <cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService"  serviceClass="com.mulesoft.myService.myClass"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

=== Advanced Examples

Download the following Studio project and then import it as a **Mule Studio generated Deployable Archive (.zip)**:

===== link:/documentation/download/attachments/122752042/tshirt-service.zip?version=1&modificationDate=1397160066763[T-Shirt SOAP Service Project]

[NOTE]
Note that for the example to be deployable, you must add your own Kissmetrics API key in kissmetrics.properties and your own database reference and credentials in postgresql.properties. Without these, you can still examine the flow to get an idea of best practices.

For a different example, create a *Mule Example Project* in Studio and select the template *Service Orchestration and Choice Routing*.

Notice in these examples how the routing is being performed for different operations. Also notice how exceptions are being handled.

== Adding Security

*_Enterprise_* +
To protect the SOAP API in your Mule flow, you can configure elements in the CXF component to apply WS-security. You can add http://cxf.apache.org/docs/ws-security.html[WS-Security] *Configuration Elements* (i.e. key-value pairs) to validate and/or authenticate information in the SOAP header of a message; you can also enable one or more of six *Token Validators* to ensure message security. The ability to add these security features is available only in the Enterprise version of Mule.

Consult the link:/documentation/display/current/Securing+a+SOAP+API[Securing a SOAP API] document to configure the security elements of your API.

== See Also

* Consult the link:/documentation/display/current/CXF+Component+Reference[CXF Component Reference].
* Read this http://blogs.mulesoft.org/mule-school-web-services-part-1/[blog post] about code-first SOAP implementation.
* Read http://blogs.mulesoft.org/soa-school-service-orchestration-2/[another blog post] that explains the *XML-only SOAP Web Service* template.
* Learn about the http://en.wikipedia.org/wiki/Java_API_for_XML_Web_Services[JAX-WS] annotations you need to make your Java class into a WSDL.
* Learn how to link:/documentation/display/current/Proxying+a+SOAP+API[proxy a SOAP API] with Mule.
